2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	Give up, will work around this at the key-faking level

2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	Hopefully really fix shift keys

2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	And again...

2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	Another try (quite close before)

2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	Unbreak modifier key handling, hopefully handle in the correct way

2008-01-25  Chris Lord  <chris@openedhand.com>

	* data/im-multipress.conf:
	Fix '0' key

	* gtk-im/gtkimcontextmultipress.c: (vfunc_filter_keypress):
	Hopefully fix capital letters (ignore modifier key presses)

	* src/multitap-pad-main.c: (main):
	Use shift + key to enter capital letters

2008-01-25  Chris Lord  <chris@openedhand.com>

	* gtk-im/immultipress.c:
	Don't conflict with matchbox-im-invoker/multipress

	* src/multitap-pad-main.c: (main):
	Fix '5' key, various unimportant bits

2008-01-25  Chris Lord  <chris@openedhand.com>

	* data/im-multipress.conf:
	Add keys for capital letters

2008-01-25  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (hide_window_idle), (hide_window),
	(show_window), (invoke_cb), (main):
	Add button 1 to the buttons list, delay hiding the keypad slightly so
	that quick hide/shows won't cause flickering

2008-01-24  Chris Lord  <chris@openedhand.com>

	* src/multitap-pad-main.c: (change_mode), (alt_keypress_timeout),
	(button_press_event_cb), (button_release_event_cb), (new_button),
	(main):
	Replace the non-working caps toggle key with a working mode-switcher
	key, implement three modes (normal, caps, alt), change button text